libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(RustBuffer configuration, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(RustBuffer configuration, RustBuffer access_token, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider(RustBuffer configuration, uint64_t token_provider, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(RustBuffer configuration, uint64_t token_provider, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_native_http_client(RustBuffer configuration, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_claim(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_claim(uint64_t ptr, RustBuffer claim
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_claims(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_renew_claim(uint64_t ptr, RustBuffer claim, RustBuffer shutdown_time
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_access_token(uint64_t ptr, int8_t force_refresh
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_fleet_claims(uint64_t ptr, RustBuffer fleet_id, RustBuffer requests
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_fleet_claims(uint64_t ptr, RustBuffer namespace, RustBuffer fleet_id
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_presign_image_uploads(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_image(uint64_t ptr, RustBuffer namespace, uint64_t manifest
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_image(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_image(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_images(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_namespace(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_namespaces(uint64_t ptr
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_pool(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_pool(uint64_t ptr, RustBuffer pool
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_pool(uint64_t ptr, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_pools(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_pool(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_service_request(uint64_t ptr, RustBuffer sandbox, RustBuffer service, RustBuffer path, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_signed_service_url(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_signed_service_urls(uint64_t ptr, RustBuffer sandbox
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_revoke_signed_service_url(uint64_t ptr, RustBuffer signed_service_url
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_template(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_template(uint64_t ptr, RustBuffer template
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_get_template(uint64_t ptr, RustBuffer namespace, RustBuffer name
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_templates(uint64_t ptr, RustBuffer namespace
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_reconcile_template(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_create_user_api_key(uint64_t ptr, RustBuffer request
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_delete_user_api_key(uint64_t ptr, RustBuffer id
);
uint64_t uniffi_cyclops_sdk_fn_method_cyclopsclient_list_user_api_keys(uint64_t ptr
);
RustBuffer uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_namespace(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createtemplaterequestbuilder_spec(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_createuserapikeyrequestbuilder_new(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_build(uint64_t ptr, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_name(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_method_createuserapikeyrequestbuilder_scope(uint64_t ptr, RustBuffer value, RustCallStatus *_Nonnull out_status
);